fix top spacing on mobile for single posts, update first blog post to...nothing

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -587,6 +587,9 @@ section#blog
 section#single-post
 	padding-bottom (pad*1.5)
 	
+	+below(medium)
+		margin-top (pad*2)
+	
 	.post-head
 		margin-bottom (pad*2)
 		padding-bottom (pad*2)
